@@ -1,3 +1,10 @@
+*devil-9999 (03 Nov 2020)
+
+  03 Nov 2020; AzP <peterasplund@gentoo.se> +devil-9999.ebuild,
+  -devil-1.8.0-r1.ebuild, devil-1.8.0.ebuild:
+  media-libs/devil:   Version bump to 1.8.0 and port ebuild to cmake. Add 9999
+  version for git HEAD.  Signed-off-by: Peter Asplund <peter.azp@gmail.com>
+
   18 Feb 2018; AzP <peterasplund@gentoo.se> devil-1.7.8-r3.ebuild:
   Clean up all complaints by repoman
 
